--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Numerical Methods/Implicit and Explicit Integration/Implicit and Explicit Integr
 Numerical Methods/Implicit and Explicit Integration/Implicit and Explicit Integration MATLAB.asv
 Numerical Methods/Adaptive Integration/.vs/Adaptive Integration/v15/.suo
 *.sln
+Random Compiler/.vs/Random/v15/.suo
