--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Numerical Methods/Adaptive Integration/.vs/Adaptive Integration/v15/.suo
 *.sln
 Random Compiler/.vs/Random/v15/.suo
 *.opendb
+*.pdf
